<resources>
    <string name="app_name">LabCert</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>

    <string name="group">Gruppe</string>
    <string name="create_student">Neuer Teilnehmer"</string>
    <string name="requirements">Anforderungen</string>
    <string name="new_requirement">Neue Anforderung</string>
    <string name="switch_group">Gruppe wechseln</string>
    <string name="new_group">Neue Gruppe</string>

    <string name="import_csv">CSV importieren</string>
    <string name="sync_db">Datenbank synchronisieren</string>
    <string name="show_cert">Leistungsnachweise anzeigen</string>

    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">--- BLANK FRAGMENT ---</string>
    <string name="unknown_student">Teilnehmer nicht vorhanden.</string>
    <string name="editText_hint_surname">Name</string>
    <string name="button_create_student">Student hinzufügen</string>
    <string name="editText_hint_firstname">Vorname</string>
    <string name="editText_hint_matr">Matrikelnummer</string>
    <string name="editText_hint_labteam">Team</string>
    <string name="editText_hint_bib">Bibliotheksnummer</string>
    <string name="editText_errorMessage">Angabe erforderlich!</string>
    <string name="editText_hint_comment">Kommentar</string>
    <string name="button_save_comment">Kommentar speichern</string>
    <string name="button_switch_group">Übernehmen</string>

    <string name="sync_attd_url">http://josuaa.de/labcert/sync/insert_presence.php</string>
    <string name="comma_split">,</string>
    <string name="sync_web">Synchronisation Webservice</string>
    <string name="scan_aborted">Scan abgebrochen</string>
    <string name="no_data">Keine Daten vorhanden</string>
    <string name="attd_updated">Anwesenheit aktualisiert</string>
    <string name="perm_read_ext_sto">android.permission.READ_EXTERNAL_STORAGE</string>
    <string name="perm_wr_ext_sto">android.permission.WRITE_EXTERNAL_STORAGE</string>
    <string name="synchronizing">Datenbank wird synchronisiert...</string>
    <string name="db_synchronized">Datenbank synchronisiert</string>
    <string name="file_imported">Datei importiert</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="create_requirement">Neue Anforderung</string>
    <string name="str_reqType">Typ</string>
    <string name="str_reqName">Name</string>
    <string name="str_Group">Gruppe</string>
    <string name="str_Lab">Fach</string>
    <string name="str_Term">Semester</string>
    <string name="str_createReq">Anforderung erstellen</string>
    <string name="import_requirement">Anforderung importieren</string>
    <string name="button_create_group">Gruppe erstellen</string>
    <string name="editText_hint_lab">Fach</string>
    <string name="editText_hint_lab_id">Fachkennung</string>
    <string name="editText_hint_group_no">Gruppennummer</string>
    <string name="editText_hint_supervisor">Betreuer</string>
    <string name="all_groups">Alle Gruppen</string>
    <string name="button_import_req">Anforderungen importieren</string>
    <string name="split_blank">\\s+</string>
    <string name="str_count">Anzahl</string>
    <string name="editText_hint_email">Email</string>
    <string name="editText_hint_term">Semester</string>

    <string name="editText_hint_username">Benutzername</string>
    <string name="textview_username">Benutzername</string>
    <string name="editText_hint_password">Passwort</string>
    <string name="textview_password">Passwort</string>
    <string name="editText_hint_term">Semester</string>
    <string name="textview_term">Semester</string>
    <string name="button_save_data">Speichern</string>

    <string-array name="req_array">
        <item>Anwesenheit</item>
        <item>Aufgabe</item>
        <item>Punktzahl</item>
        <item>Eingangstest</item>
        <item>Kurztest</item>
        <item>Abfrage</item>
    </string-array>

    <string-array name="title_array">
        <item>Herr</item>
        <item>Frau</item>
    </string-array>

</resources>
