<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_m_group"
            android:title="@string/group" />
        <item
            android:id="@+id/nav_all_groups"
            android:icon="@drawable/ic_m_switch_group"
            android:title="@string/all_groups" />
        <item
            android:id="@+id/nav_add_member"
            android:icon="@drawable/ic_m_create_student"
            android:title="@string/create_student" />
        <item
            android:id="@+id/nav_new_group"
            android:icon="@drawable/ic_m_create_group"
            android:title="@string/new_group" />
    </group>

    <item android:title="Anforderungen">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_requirements"
                    android:icon="@drawable/ic_m_req"
                    android:title="@string/requirements" />
                <item
                    android:id="@+id/nav_create_requirement"
                    android:icon="@drawable/ic_m_create_req"
                    android:title="@string/create_requirement" />
                <item
                    android:id="@+id/nav_import_requirement"
                    android:icon="@drawable/ic_m_import_csv"
                    android:title="@string/import_requirement" />
            </group>
        </menu>
    </item>


    <item android:title="Dateien">
        <menu>
            <item
                android:id="@+id/nav_sync_db"
                android:icon="@drawable/ic_m_sync_db"
                android:title="@string/sync_db" />
            <item
                android:id="@+id/nav_import_table"
                android:icon="@drawable/ic_m_import_csv"
                android:title="@string/import_table" />
            <item
                android:id="@+id/nav_cert"
                android:icon="@drawable/ic_m_accomp_txt"
                android:title="@string/show_cert" />
        </menu>
    </item>
</menu>
