<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CreateStudentFragment">

    <Spinner
        android:id="@+id/spinner_student_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_surname"
        android:inputType="text"
        android:id="@+id/editText_surname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_firstname"
        android:inputType="text"
        android:id="@+id/editText_firstname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_matr"
        android:inputType="number"
        android:id="@+id/editText_matr"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_bib"
        android:inputType="number"
        android:id="@+id/editText_bib"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_email"
        android:inputType="textEmailAddress"
        android:id="@+id/editText_student_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_lab"
        android:inputType="text"
        android:id="@+id/editText_student_lab"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_group_no"
        android:inputType="text"
        android:id="@+id/editText_student_group"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_term"
        android:inputType="text"
        android:id="@+id/editText_student_term"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_comment"
        android:inputType="text"
        android:id="@+id/editText_comment"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_student"
        android:id="@+id/button_create_student"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

</LinearLayout>
